added vehicles and order management

--- a/source/components/com_xivetranscorder/administrator/language/en-GB.com_xivetranscorder.ini
+++ b/source/components/com_xivetranscorder/administrator/language/en-GB.com_xivetranscorder.ini
@@ -23,6 +23,7 @@ COM_XIVETRANSCORDER_ITEM_ID_SELECT_LABEL="Select the item ID"
 COM_XIVETRANSCORDER_ITEM_ID_SELECT_LABEL_FORM="Select the Item ID to Edit (Set up as 0 if you want to set up as add form)"
 COM_XIVETRANSCORDER_FIELDSET_ITEM_ID_SELECT_LABEL="Required Settings"
 COM_XIVETRANSCORDER_FILTER_SELECT_LABEL=" - Select %s - "
+COM_XIVETRANSCORDER_TEST_LABEL="Test label"
 
 COM_XIVETRANSCORDER_TITLE_TRANSCORDERS = "Transport Orders"
 COM_XIVETRANSCORDER_TITLE_TRANSCORDERS_CATEGORIES = "Order Categories"
@@ -189,3 +190,61 @@ COM_XIVETRANSCORDER_FORM_LBL_TABAPP_STATE="State"
 COM_XIVETRANSCORDER_FORM_DESC_TABAPP_STATE=""
 COM_XIVETRANSCORDER_FORM_LBL_TABAPP_ORDERING="Ordering"
 COM_XIVETRANSCORDER_FORM_DESC_TABAPP_ORDERING=""
+COM_XIVETRANSCORDER_TITLE_VEHICLES="Vehicles"
+COM_XIVETRANSCORDER_VEHICLES_ID="ID"
+COM_XIVETRANSCORDER_VEHICLES_ORDERING="Order"
+COM_XIVETRANSCORDER_VEHICLES_CREATED_BY="Created by"
+COM_XIVETRANSCORDER_VEHICLES_STATE="State"
+COM_XIVETRANSCORDER_VEHICLES_CONTACT_ID="Contact Id"
+COM_XIVETRANSCORDER_VEHICLES_LISTNAME="List Name"
+COM_XIVETRANSCORDER_VEHICLES_CALLNAME="Callname"
+COM_XIVETRANSCORDER_VEHICLES_MOBILE="0"
+COM_XIVETRANSCORDER_VEHICLES_NAVI_ID="0"
+COM_XIVETRANSCORDER_VEHICLES_FLEET_CAR="Fleet Car"
+COM_XIVETRANSCORDER_VEHICLES_FLEET_CAR_FILTER="- Select fleet_car -"
+COM_XIVETRANSCORDER_VEHICLES_FITTINGS="Fittings"
+COM_XIVETRANSCORDER_VEHICLES_LICENSE_PLATE="License Plate"
+COM_XIVETRANSCORDER_VEHICLES_INSURANCE_ID="0"
+COM_XIVETRANSCORDER_VEHICLES_INSURANCE_NO="0"
+COM_XIVETRANSCORDER_TITLE_LIST_VIEW_ORDERMANAGEMENTS="Order-managements"
+COM_XIVETRANSCORDER_TITLE_LIST_VIEW_ORDERMANAGEMENTS_DESC="Show a list of Order-managements"
+COM_XIVETRANSCORDER_TITLE_ITEM_VIEW_ORDERMANAGEMENT="Single Ordermanagement"
+COM_XIVETRANSCORDER_TITLE_ITEM_VIEW_ORDERMANAGEMENT_DESC="Show a specific Ordermanagement"
+COM_XIVETRANSCORDER_TITLE_FORM_VIEW_ORDERMANAGEMENT="OrdermanagementForm"
+COM_XIVETRANSCORDER_TITLE_FORM_VIEW_ORDERMANAGEMENT_DESC="Show a form to add or edit a Ordermanagement"
+COM_XIVETRANSCORDER_TITLE_VEHICLE="Vehicle"
+COM_XIVETRANSCORDER_LEGEND_VEHICLE="Vehicle"
+COM_XIVETRANSCORDER_FORM_LBL_VEHICLE_ID="ID"
+COM_XIVETRANSCORDER_FORM_DESC_VEHICLE_ID=""
+COM_XIVETRANSCORDER_FORM_LBL_VEHICLE_ORDERING="Order"
+COM_XIVETRANSCORDER_FORM_DESC_VEHICLE_ORDERING=""
+COM_XIVETRANSCORDER_FORM_LBL_VEHICLE_CREATED_BY="Created by"
+COM_XIVETRANSCORDER_FORM_DESC_VEHICLE_CREATED_BY=""
+COM_XIVETRANSCORDER_FORM_LBL_VEHICLE_STATE="State"
+COM_XIVETRANSCORDER_FORM_DESC_VEHICLE_STATE=""
+COM_XIVETRANSCORDER_FORM_LBL_VEHICLE_CONTACT_ID="Contact Id"
+COM_XIVETRANSCORDER_FORM_DESC_VEHICLE_CONTACT_ID=""
+COM_XIVETRANSCORDER_FORM_LBL_VEHICLE_LISTNAME="List Name"
+COM_XIVETRANSCORDER_FORM_DESC_VEHICLE_LISTNAME=""
+COM_XIVETRANSCORDER_FORM_LBL_VEHICLE_CALLNAME="Callname"
+COM_XIVETRANSCORDER_FORM_DESC_VEHICLE_CALLNAME=""
+COM_XIVETRANSCORDER_FORM_LBL_VEHICLE_MOBILE="Mobile"
+COM_XIVETRANSCORDER_FORM_DESC_VEHICLE_MOBILE="Used to send messages to the phone if there is no api or navi connection"
+COM_XIVETRANSCORDER_FORM_LBL_VEHICLE_NAVI_ID="Navi Id"
+COM_XIVETRANSCORDER_FORM_DESC_VEHICLE_NAVI_ID="Navigation Id is used to identify the navi via api and to send routes and messages"
+COM_XIVETRANSCORDER_FORM_LBL_VEHICLE_FLEET_CAR="Fleet Car"
+COM_XIVETRANSCORDER_FORM_DESC_VEHICLE_FLEET_CAR="Is this car available all the time or is it your car? Its a fleet car!"
+COM_XIVETRANSCORDER_FORM_LBL_VEHICLE_FITTINGS="Fittings"
+COM_XIVETRANSCORDER_FORM_DESC_VEHICLE_FITTINGS=""
+COM_XIVETRANSCORDER_FORM_LBL_VEHICLE_LICENSE_PLATE="License Plate"
+COM_XIVETRANSCORDER_FORM_DESC_VEHICLE_LICENSE_PLATE=""
+COM_XIVETRANSCORDER_FORM_LBL_VEHICLE_INSURANCE_ID="Insurance"
+COM_XIVETRANSCORDER_FORM_DESC_VEHICLE_INSURANCE_ID=""
+COM_XIVETRANSCORDER_FORM_LBL_VEHICLE_INSURANCE_NO="Insurance Identification"
+COM_XIVETRANSCORDER_FORM_DESC_VEHICLE_INSURANCE_NO="Insurance identification number as indicated on the service card"
+COM_XIVETRANSCORDER_TITLE_LIST_VIEW_VEHICLES="Vehicles"
+COM_XIVETRANSCORDER_TITLE_LIST_VIEW_VEHICLES_DESC="Show a list of Vehicles"
+COM_XIVETRANSCORDER_TITLE_ITEM_VIEW_VEHICLE="Single Vehicle"
+COM_XIVETRANSCORDER_TITLE_ITEM_VIEW_VEHICLE_DESC="Show a specific Vehicle"
+COM_XIVETRANSCORDER_TITLE_FORM_VIEW_VEHICLE="VehicleForm"
+COM_XIVETRANSCORDER_TITLE_FORM_VIEW_VEHICLE_DESC="Show a form to add or edit a Vehicle"
