--- a/source/components/com_xivetranscorder/administrator/language/en-GB.com_xivetranscorder.sys.ini
+++ b/source/components/com_xivetranscorder/administrator/language/en-GB.com_xivetranscorder.sys.ini
@@ -1,5 +1,6 @@
 COM_XIVETRANSCORDER = "XiveTOCA"
 COM_XIVETRANSCORDER_XML_DESCRIPTION = "The Transport Order and Coordination Application for XiveIRM"
+COM_XIVETRANSCORDER_TEST_LABEL = "Test label"
 COM_XIVETRANSCORDER_TITLE_TRANSCORDERS = "Transport Orders"
 COM_XIVETRANSCORDER_TRANSCORDERS_CATID = "Order Categories"
 COM_XIVETRANSCORDER_TITLE_LIST_VIEW_TRANSCORDERS = "Order List"
@@ -17,3 +18,16 @@ COM_XIVETRANSCORDER_TITLE_ITEM_VIEW_API = "Single Api"
 COM_XIVETRANSCORDER_TITLE_ITEM_VIEW_API_DESC = "Show a specific Api"
 COM_XIVETRANSCORDER_TITLE_FORM_VIEW_API = "ApiForm"
 COM_XIVETRANSCORDER_TITLE_FORM_VIEW_API_DESC = "Show a form to add or edit an Api"
+COM_XIVETRANSCORDER_TITLE_VEHICLES="Vehicles"
+COM_XIVETRANSCORDER_TITLE_LIST_VIEW_VEHICLES="Vehicles"
+COM_XIVETRANSCORDER_TITLE_LIST_VIEW_VEHICLES_DESC="Show a list of Vehicles"
+COM_XIVETRANSCORDER_TITLE_ITEM_VIEW_VEHICLE="Single Vehicle"
+COM_XIVETRANSCORDER_TITLE_ITEM_VIEW_VEHICLE_DESC="Show a specific Vehicle"
+COM_XIVETRANSCORDER_TITLE_FORM_VIEW_VEHICLE="VehicleForm"
+COM_XIVETRANSCORDER_TITLE_FORM_VIEW_VEHICLE_DESC="Show a form to add or edit a Vehicle"
+COM_XIVETRANSCORDER_TITLE_LIST_VIEW_ORDERMANAGEMENTS="Order-managements"
+COM_XIVETRANSCORDER_TITLE_LIST_VIEW_ORDERMANAGEMENTS_DESC="Show a list of Order-managements"
+COM_XIVETRANSCORDER_TITLE_ITEM_VIEW_ORDERMANAGEMENT="Single Ordermanagement"
+COM_XIVETRANSCORDER_TITLE_ITEM_VIEW_ORDERMANAGEMENT_DESC="Show a specific Ordermanagement"
+COM_XIVETRANSCORDER_TITLE_FORM_VIEW_ORDERMANAGEMENT="OrdermanagementForm"
+COM_XIVETRANSCORDER_TITLE_FORM_VIEW_ORDERMANAGEMENT_DESC="Show a form to add or edit a Ordermanagement"
