--- a/source/components/com_xivetranscorder/site/language/en-GB.com_xivetranscorder.ini
+++ b/source/components/com_xivetranscorder/site/language/en-GB.com_xivetranscorder.ini
@@ -58,12 +58,16 @@ COM_XIVETRANSCORDER_ORDER_LIST_CAT = "Today's Orders for Category: "
 COM_XIVETRANSCORDER_ORDER_LIST_TH_ID = "#"
 COM_XIVETRANSCORDER_ORDER_LIST_TH_NAME = "Contact"
 COM_XIVETRANSCORDER_ORDER_LIST_TH_TIMESTAMP = "Time"
-COM_XIVETRANSCORDER_ORDER_LIST_TH_ADDRESS_FROM = "From"
-COM_XIVETRANSCORDER_ORDER_LIST_TH_ADDRESS_TO = "To"
+COM_XIVETRANSCORDER_ORDER_LIST_TH_ADDRESS_FROM = "Origin"
+COM_XIVETRANSCORDER_ORDER_LIST_TH_ADDRESS_TO = "Destination"
 COM_XIVETRANSCORDER_ORDER_LIST_TH_STATUS = "Status"
-
 COM_XIVETRANSCORDER_ORDER_LIST_TD_MODIFIED = "Modified"
 
+COM_XIVETRANSCORDER_ORDER_LIST_FILTER = "Filtered Results"
+COM_XIVETRANSCORDER_ORDER_LIST_FILTER_DATERANGE = "Daterange"
+COM_XIVETRANSCORDER_ORDER_LIST_FILTER_CONTACTS = "Contact"
+COM_XIVETRANSCORDER_ORDER_LIST_FILTER_PDK = "Predefined Keys"
+COM_XIVETRANSCORDER_ORDER_LIST_FILTER_PDK_NO_ORDER_ID = "No Order ID"
 
 ; Transport categories
 COM_XIVETRANSCORDER_CATEGORY_PATIENT_TRANSPORT = "Patient Transport"
